LIN-3570/LIN-3683 :: Allow null elements in Sequence
Change-Id: If72554d0f97d93821f00969d4b4d13fc55c6a396